2012-01-11 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-dialog.c:
	* src/nact/base-dialog.h:
	BASE_DIALOG_TYPE GType macro is renamed as BASE_TYPE_DIALOG.

	* src/nact/nact-add-capability-dialog.c (register_type):
	* src/nact/nact-add-scheme-dialog.c (register_type):
	* src/nact/nact-confirm-logout.c (register_type):
	* src/nact/nact-export-ask.c (register_type):
	* src/nact/nact-icon-chooser.c (register_type):
	* src/nact/nact-preferences-editor.c (register_type): Updated accordingly.

	* src/nact/base-assistant.c:
	* src/nact/base-assistant.h:
	BASE_ASSISTANT_TYPE GType macro is renamed as BASE_TYPE_ASSISTANT.
	Remove the work-around against #589745 (Apply message in GtkAssistant).

	* src/nact/nact-assistant-export.c (register_type):
	* src/nact/nact-assistant-import.c (register_type): Updated accordingly.

	* src/nact/base-dialog.c:
	* src/nact/base-dialog.h:
	BASE_WINDOW_TYPE is renamed as BASE_TYPE_WINDOW.
	Review whole initialization process.

	* src/nact/base-assistant.c (register_type):
	* src/nact/nact-iaction-tab.c (register_type):
	* src/nact/nact-ibasenames-tab.c (register_type):
	* src/nact/nact-icapabilities-tab.c (register_type):
	* src/nact/nact-icommand-tab.c (register_type):
	* src/nact/nact-ienvironment-tab.c (register_type):
	* src/nact/nact-iexecution-tab.c (register_type):
	* src/nact/nact-ifolders-tab.c (register_type):
	* src/nact/nact-imimetypes-tab.c (register_type):
	* src/nact/nact-iproperties-tab.c (register_type):
	* src/nact/nact-ischemes-tab.c (register_type):
	* src/nact/nact-main-window.c (register_type): Updated accordingly.

	* src/nact/base-builder.c:
	* src/nact/base-builder.h:
	BASE_BUILDER_TYPE is renamed as BASE_TYPE_BUILDER.

	* BASE_SIGNAL_QUIT_REQUESTED, BASE_SIGNAL_QUIT: New signals, defined in
	BaseISession interface.

	* src/nact/nact-marshal.def: New file.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/base-application.c
	* src/nact/base-application.h